style.css
/* ... */
@media (max-width: 1080px) {

	.entry-content,
	.editor-styles-wrapper {
		padding-left: var(--side-padding-mobile);
		padding-right: var(--side-padding-mobile);
	}

	.wp-block-group.is-fullwidth {
		margin-left: calc(-1 * var(--side-padding-mobile));
		margin-right: calc(-1 * var(--side-padding-mobile));
		padding-left: var(--side-padding-mobile);
		padding-right: var(--side-padding-mobile);
	}
}

/*
* Gutenberg Blocks
*/

/* Unset inline editor styles */

.editor-visual-editor__post-title-wrapper {
	margin-top: 0 !important;
}

/* Columns block */

.is-layout-flex .wp-block-column,
.wp-block-column {
	margin-bottom: var(--vertical-space-small);
}

@media (max-width: 782px) {

	.wp-block-columns {
		gap: 0;
	}
}

/* Grid block */

.is-layout-grid {
	gap: 5rem;
}

.is-layout-grid figure {
	display: flex;
  align-items: center;
  justify-content: center;
}

/* Details block */

.wp-block-details {
	border-radius: var(--border-radius);
	padding: 0.75rem 1rem;
	border: 0.125rem solid #fff;
	margin-bottom: 0.75rem;
}

.wp-block-details:last-of-type {
	margin-bottom: var(--vertical-space-small);
}

.wp-block-details summary {
	list-style: none;
	display: flex;
	align-items: center;
	position: relative;
	padding-left: 2.5rem;
}

.wp-block-details summary::before {
	content: "";
	position: absolute;
	left: 0;
	width: 2rem;
	height: 2rem;
	display: flex;
	justify-content: center;
	align-items: center;
	background-image: url(img/caret-right-cropped.png);
	background-size: 1rem;
	background-position: center;
	background-repeat: no-repeat;
	filter: var(--dark-text-filter);
	transition: transform 0.3s ease;
}

.page-color-2 .wp-block-details summary::before {
	filter: var(--light-text-filter);
}

.wp-block-details[open] summary::before {
	transform: rotate(90deg);
}

.wp-block-details h3 {
	margin: 0;
}

summary .block-editor-rich-text__editable {
	font-family: var(--accent-font);
	line-height: 1;
	text-transform: uppercase;
	font-size: var(--h3-font-size);
	font-weight: bold;
}

.wp-block-details .details-content {
	overflow: hidden;
	transition: max-height 0.3s ease;
}

.editor-styles-wrapper summary + *,
.wp-block-details .details-content > :first-child {
	margin-top: 1rem;
}

.editor-styles-wrapper details > :last-child,
.wp-block-details .details-content > :last-child {
	margin-bottom: 0.25rem;
}

/* Contact form block */

.form-message {
	text-align: center;
}

/*
 * Color Classes
 */
.has-accent-color-1-color {
	color: var(--accent-color-1) !important;
}

.has-accent-color-1-background-color {
	background-color: var(--accent-color-1) !important;
}

.has-accent-color-2-color {
	color: var(--accent-color-2) !important;
}

.has-accent-color-2-background-color {
	background-color: var(--accent-color-2) !important;
}

.has-accent-color-3-color {
	color: var(--accent-color-3) !important;
}

.has-accent-color-3-background-color {
	background-color: var(--accent-color-3) !important;
}

.has-dark-text-color-color {
	color: var(--dark-text) !important;
}

.has-dark-text-color-background-color {
	background-color: var(--dark-text) !important;
}

.has-light-text-color-color {
	color: var(--light-text) !important;
}

.has-light-text-color-background-color {
	background-color: var(--light-text) !important;
}

